--- a/ush/templates/FV3LAM_wflow.xml
+++ b/ush/templates/FV3LAM_wflow.xml
@@ -1171,7 +1171,7 @@ MODULES_RUN_TASK_FP script.
     &RSRV_ANALYSIS;
     &WALL_LIMIT_ANAL;
 
-    <command>&LOAD_MODULES_RUN_TASK_FP; "&RUN_ANAL_TN;" "&JOBSDIR;/JREGIONAL_RUN_ANAL_SD"</command>
+    <command>&LOAD_MODULES_RUN_TASK_FP; "&RUN_ANAL_TN;" "&JOBSDIR;/JREGIONAL_RUN_ANAL"</command>
     {% if machine in ["JET", "HERA"] -%}
     <cores>{{ ncores_run_anal }}</cores>
     <native>{{ native_run_anal }} &RRFS_RESERVE;</native>
