--- a/ush/templates/FV3LAM_wflow.xml
+++ b/ush/templates/FV3LAM_wflow.xml
@@ -957,6 +957,7 @@ MODULES_RUN_TASK_FP script.
     &NATIVE_ALL;
     <walltime>&WALLTIME_PREP_CYC;</walltime>
     &NODESIZE_ALL;
+    <memory>{{ memo_prep_cyc }}</memory>
     <jobname>&TAG;_&PREP_CYC_SPINUP_TN;{{ uscore_ensmem_name }}</jobname>
     <join><cyclestr>&LOGDIR;/&PREP_CYC_SPINUP_TN;{{ uscore_ensmem_name }}_@Y@m@d@H.log</cyclestr></join>
 
@@ -1068,6 +1069,7 @@ MODULES_RUN_TASK_FP script.
       &NATIVE_ALL;
       <walltime>&WALLTIME_SAVE_RESTART;</walltime>
       &NODESIZE_ALL;
+      <memory>{{ memo_save_restart }}</memory>
       <jobname>&TAG;_&SAVE_RESTART_TN;_ensinit{{ uscore_ensmem_name }}</jobname>
       <join><cyclestr>&LOGDIR;/&SAVE_RESTART_TN;_ensinit{{ uscore_ensmem_name }}_@Y@m@d@H.log</cyclestr></join>
 
@@ -1104,6 +1106,7 @@ MODULES_RUN_TASK_FP script.
     &NATIVE_ALL;
     <walltime>&WALLTIME_PREP_CYC;</walltime>
     &NODESIZE_ALL;
+    <memory>{{ memo_prep_cyc }}</memory>
     <jobname>&TAG;_&PREP_CYC_SPINUP_TN;_ensinit{{ uscore_ensmem_name }}</jobname>
     <join><cyclestr>&LOGDIR;/&PREP_CYC_SPINUP_TN;_ensinit{{ uscore_ensmem_name }}_@Y@m@d@H.log</cyclestr></join>
 
@@ -1622,6 +1625,7 @@ MODULES_RUN_TASK_FP script.
       &NATIVE_ALL;
       <walltime>&WALLTIME_SAVE_RESTART;</walltime>
       &NODESIZE_ALL;
+      <memory>{{ memo_save_restart }}</memory>
       <jobname>&TAG;_&SAVE_RESTART_TN;{{ uscore_ensmem_name }}_f#fhr#</jobname>
       <join><cyclestr>&LOGDIR;/&SAVE_RESTART_TN;_spinup{{ uscore_ensmem_name }}_f#fhr#_@Y@m@d@H.log</cyclestr></join>
 
@@ -1751,6 +1755,7 @@ MODULES_RUN_TASK_FP script.
     &NATIVE_ALL;
     <walltime>&WALLTIME_PREP_CYC;</walltime>
     &NODESIZE_ALL;
+    <memory>{{ memo_prep_cyc }}</memory>
     <jobname>&TAG;_&PREP_CYC_PROD_TN;{{ uscore_ensmem_name }}</jobname>
     <join><cyclestr>&LOGDIR;/&PREP_CYC_PROD_TN;{{ uscore_ensmem_name }}_@Y@m@d@H.log</cyclestr></join>
 
@@ -2052,54 +2057,6 @@ MODULES_RUN_TASK_FP script.
         {%- endfor %}
         </and> 
         {%- endif %}
-      </and>
-    </dependency>
-  </task>
-
-{%- endif %}
-
-{%- if do_recenter %}
-<!--
-************************************************************************
-************************************************************************
--->
-  <task name="&RUN_RECENTER_TN;" cycledefs="recentercyc" maxtries="{{ maxtries_recenter }}">
-    &RSRV_ENKF;
-    &WALL_LIMIT_RECENTER;
-    <command>&LOAD_MODULES_RUN_TASK_FP; "&RUN_RECENTER_TN;" &JOBSDIR;/JREGIONAL_RUN_RECENTER</command>
-    &RESOURCES_RUN_RECENTER;
-    &NATIVE_ALL;
-    <walltime>&WALLTIME_RUN_RECENTER;</walltime>
-    &NODESIZE_ALL;
-    <jobname><cyclestr>&TAG;_&RUN_RECENTER_TN;</cyclestr></jobname>
-    <join><cyclestr>&LOGDIR;/&RUN_RECENTER_TN;_@Y@m@d@H.log</cyclestr></join>
-    <envar><name>GLOBAL_VAR_DEFNS_FP</name><value>&GLOBAL_VAR_DEFNS_FP;</value></envar>
-
-    <envar><name>nens</name><value>{{ num_ens_members }}</value></envar>
-    <envar><name>CDATE</name><value><cyclestr>@Y@m@d@H</cyclestr></value></envar>
-    <envar><name>CYCLE_DIR</name><value><cyclestr>&CYCLE_BASEDIR;/@Y@m@d@H</cyclestr></value></envar>
-    <envar><name>CYCLE_ROOT</name><value><cyclestr>&CYCLE_BASEDIR;</cyclestr></value></envar>
-    <envar><name>ENSCTRL_CYCLE_DIR</name><value><cyclestr>&ENSCTRL_CYCLE_BASEDIR;/@Y@m@d@H</cyclestr></value></envar>
-    <envar><name>ENSCTRL_CYCLE_ROOT</name><value><cyclestr>&ENSCTRL_CYCLE_BASEDIR;</cyclestr></value></envar>
-    <envar><name>NWGES_DIR</name><value><cyclestr>&NWGES_BASEDIR;/@Y@m@d@H</cyclestr></value></envar>
-
-    <dependency>
-      <and>
-        {%- if do_nonvar_cldanal %}
-        <and>
-        {%- for m in range(1, num_ens_members+1) %}
-          <taskdep task="&CLDANL_NONVAR_TN;_prod_mem{{ "%04d" % m }}"/>
-        {%- endfor %}
-        </and>
-        {%- elif do_enkf_radar_ref %}
-        <taskdep task="&ENKF_RADAR_REF_TN;"/>
-        {%- elif do_enkfupdate %}
-        <taskdep task="&RUN_ENKFUPDT_TN;"/>
-        {%- endif %}
-        <or>
-        <datadep age="00:00:00:05"><cyclestr>&ENSCTRL_CYCLE_BASEDIR;/@Y@m@d@H/nonvar_cldanl/nonvarcldanl_complete.txt</cyclestr></datadep>
-        <datadep age="00:00:00:05"><cyclestr>&ENSCTRL_CYCLE_BASEDIR;/@Y@m@d@H/nonvar_cldanl_spinup/nonvarcldanl_complete.txt</cyclestr></datadep>
-        </or>
       </and>
     </dependency>
   </task>
@@ -2435,6 +2392,54 @@ MODULES_RUN_TASK_FP script.
 {%- endif %}
 {%- endif %}
 
+{%- if do_recenter %}
+<!--
+************************************************************************
+************************************************************************
+-->
+  <task name="&RUN_RECENTER_TN;" cycledefs="recentercyc" maxtries="{{ maxtries_recenter }}">
+    &RSRV_ENKF;
+    &WALL_LIMIT_RECENTER;
+    <command>&LOAD_MODULES_RUN_TASK_FP; "&RUN_RECENTER_TN;" &JOBSDIR;/JREGIONAL_RUN_RECENTER</command>
+    &RESOURCES_RUN_RECENTER;
+    &NATIVE_ALL;
+    <walltime>&WALLTIME_RUN_RECENTER;</walltime>
+    &NODESIZE_ALL;
+    <jobname><cyclestr>&TAG;_&RUN_RECENTER_TN;</cyclestr></jobname>
+    <join><cyclestr>&LOGDIR;/&RUN_RECENTER_TN;_@Y@m@d@H.log</cyclestr></join>
+    <envar><name>GLOBAL_VAR_DEFNS_FP</name><value>&GLOBAL_VAR_DEFNS_FP;</value></envar>
+
+    <envar><name>nens</name><value>{{ num_ens_members }}</value></envar>
+    <envar><name>CDATE</name><value><cyclestr>@Y@m@d@H</cyclestr></value></envar>
+    <envar><name>CYCLE_DIR</name><value><cyclestr>&CYCLE_BASEDIR;/@Y@m@d@H</cyclestr></value></envar>
+    <envar><name>CYCLE_ROOT</name><value><cyclestr>&CYCLE_BASEDIR;</cyclestr></value></envar>
+    <envar><name>ENSCTRL_CYCLE_DIR</name><value><cyclestr>&ENSCTRL_CYCLE_BASEDIR;/@Y@m@d@H</cyclestr></value></envar>
+    <envar><name>ENSCTRL_CYCLE_ROOT</name><value><cyclestr>&ENSCTRL_CYCLE_BASEDIR;</cyclestr></value></envar>
+    <envar><name>NWGES_DIR</name><value><cyclestr>&NWGES_BASEDIR;/@Y@m@d@H</cyclestr></value></envar>
+
+    <dependency>
+      <and>
+        {%- if do_nonvar_cldanal %}
+        <and>
+        {%- for m in range(1, num_ens_members+1) %}
+          <taskdep task="&CLDANL_NONVAR_TN;_prod_mem{{ "%04d" % m }}"/>
+        {%- endfor %}
+        </and>
+        {%- elif do_enkf_radar_ref %}
+        <taskdep task="&ENKF_RADAR_REF_TN;"/>
+        {%- elif do_enkfupdate %}
+        <taskdep task="&RUN_ENKFUPDT_TN;"/>
+        {%- endif %}
+        <or>
+        <datadep age="00:00:00:05"><cyclestr>&ENSCTRL_CYCLE_BASEDIR;/@Y@m@d@H/nonvar_cldanl/nonvarcldanl_complete.txt</cyclestr></datadep>
+        <datadep age="00:00:00:05"><cyclestr>&ENSCTRL_CYCLE_BASEDIR;/@Y@m@d@H/nonvar_cldanl_spinup/nonvarcldanl_complete.txt</cyclestr></datadep>
+        </or>
+      </and>
+    </dependency>
+  </task>
+
+{%- endif %}
+
 {%- if do_save_input and do_ensemble %}
 <!--
 ************************************************************************
@@ -2452,6 +2457,7 @@ MODULES_RUN_TASK_FP script.
     <nodes>{{ nnodes_save_restart }}:ppn={{ ppn_save_restart }}</nodes>
     <walltime>{{ wtime_save_restart }}</walltime>
     &NODESIZE_ALL;
+    <memory>{{ memo_save_input }}</memory>
     <jobname>&TAG;_&SAVE_INPUT_TN;{{ uscore_ensmem_name }}</jobname>
     <join><cyclestr>&LOGDIR;/&SAVE_INPUT_TN;{{ uscore_ensmem_name }}_@Y@m@d@H.log</cyclestr></join>
 
@@ -2670,6 +2676,7 @@ MODULES_RUN_TASK_FP script.
       <nodes>{{ nnodes_save_restart }}:ppn={{ ppn_save_restart }}</nodes>
       <walltime>{{ wtime_save_restart }}</walltime>
       &NODESIZE_ALL;
+      <memory>{{ memo_save_restart }}</memory>
       <jobname>&TAG;_&SAVE_RESTART_TN;{{ uscore_ensmem_name }}_f#fhr#</jobname>
       <join><cyclestr>&LOGDIR;/&SAVE_RESTART_TN;{{ uscore_ensmem_name }}_f#fhr#_@Y@m@d@H.log</cyclestr></join>
 
@@ -2708,6 +2715,7 @@ MODULES_RUN_TASK_FP script.
       <nodes>{{ nnodes_save_restart }}:ppn={{ ppn_save_restart }}</nodes>
       <walltime>{{ wtime_save_restart }}</walltime>
       &NODESIZE_ALL;
+      <memory>{{ memo_save_restart }}</memory>
       <jobname>&TAG;_&SAVE_RESTART_TN;{{ uscore_ensmem_name }}_f#fhr#</jobname>
       <join><cyclestr>&LOGDIR;/&SAVE_RESTART_TN;{{ uscore_ensmem_name }}_f#fhr#_@Y@m@d@H.log</cyclestr></join>
 
